--- a/packages/sage-assets/lib/stylesheets/tokens/_ds_tokens_dark_mode.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_ds_tokens_dark_mode.scss
@@ -44,6 +44,7 @@
     --pine-color-secondary: var(--pine-color-grey-950);
     --pine-color-secondary-hover: var(--pine-color-grey-900);
     --pine-color-secondary-disabled: var(--pine-color-grey-600);
+    --pine-color-text-secondary-hover: var(--pine-color-grey-100);
 
     // Neutral Colors
     --pine-color-neutral: var(--pine-color-grey-400);
