--- a/docs/lib/sage_rails/app/views/sage_components/_sage_button.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_button.html.erb
@@ -28,6 +28,7 @@
     <span class="visually-hidden">
       <%= component.value.html_safe %>
     </span>
+    <%# pds-icon components require @pine-ds/core CSS to be loaded for proper styling and icon rendering %>
     <pds-icon name="<%= component.icon[:name] %>"></pds-icon>
     <% if component.disclosure %>
       <pds-icon
