--- a/packages/sage-assets/lib/stylesheets/components/_alert.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_alert.scss
@@ -119,7 +119,7 @@ $-alert-border-colors: (
 
 .sage-alert__title {
   @extend %t-sage-heading-5;
-  color: var(--pine-color-text-active);
+  color: var(--pine-color-grey-950);
 }
 
 .sage-alert__title--add-on {
@@ -164,11 +164,11 @@ $-alert-border-colors: (
     @extend %t-sage-body-med;
     @include sage-focus-outline($outline-offset-inline: 4px);
 
-    color: var(--pine-color-text);
+    color: var(--pine-color-grey-900);
     text-decoration: none;
 
     &:hover {
-      color: var(--pine-color-text-active);
+      color: var(--pine-color-grey-950);
       text-decoration: underline;
     }
 
@@ -191,11 +191,11 @@ $-alert-border-colors: (
   a:not([class*="sage-"]) {
     @include sage-focus-outline($outline-offset-inline: 4px);
 
-    color: var(--pine-color-text);
+    color: var(--pine-color-grey-900);
     text-decoration: underline;
 
     &:hover {
-      color: var(--pine-color-text-active);
+      color: var(--pine-color-grey-950);
       text-decoration: none;
     }
 
