fix(sage-alert): update alert close button color

--- a/packages/sage-assets/lib/stylesheets/components/_button.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_button.scss
@@ -754,6 +754,10 @@ a.sage-btn {
     }
   }
 
+  .sage-alert &.sage-btn--primary {
+    color: var(--pine-color-primary);
+  }
+
   .sage-assistant & {
     @include sage-focus-outline--update-color(var(--pine-color-white));
 
